[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bod_r.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="Main" type="Label"]
margin_left = 17.0
margin_top = 14.0
margin_right = 521.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "[Getting satellite data ....]"
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="CountryAPi" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 511.0
margin_top = 7.0
margin_right = 574.0
margin_bottom = 27.0
text = "Close"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="CountryAPi" to="." method="_on_CountryAPi_request_completed"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
